force-app/main/default/objects/Contract/fields/DataAssinaturaClienteDocuSign__c.field-meta.xml
<CustomField>
    <fullName>DataAssinaturaClienteDocuSign__c</fullName>
    <label>Data da assinatura do cliente (DocuSign)</label>
    <type>Date</type>
</CustomField>