force-app/main/default/objects/Contract/fields/DataEnvioAssinatura__c.field-meta.xml
<CustomField>
    <fullName>DataEnvioAssinatura__c</fullName>
    <label>Data envio para assinatura</label>
    <type>Date</type>
</CustomField>