force-app/main/default/objects/Contract/fields/DataInicioContrato__c.field-meta.xml
<CustomField>
    <fullName>DataInicioContrato__c</fullName>
    <label>Data Início do Contrato</label>
    <type>Date</type>
</CustomField>