force-app/main/default/objects/Contract/fields/DiasAposAssinatura__c.field-meta.xml
<CustomField>
    <fullName>DiasAposAssinatura__c</fullName>
    <label>Dias após Assinatura</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>