force-app/main/default/objects/Contract/fields/PrazoAssinatura__c.field-meta.xml
<CustomField>
    <fullName>PrazoAssinatura__c</fullName>
    <label>Prazo para Assinatura</label>
    <type>Date</type>
</CustomField>