force-app/main/default/objects/Contract/recordTypes/Contrato.recordType-meta.xml
<RecordType>
    <fullName>Contrato</fullName>
    <active>true</active>
    <label>Contrato</label>
</RecordType>